DeploymentStaging/deployPackage/objects/Work_Order_Activity_Log__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finished_New__c</fullName>
        <description>Replacement field for the Finished__c rollup field.</description>
        <label>Finished</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Finished_at_Equipment_New__c</fullName>
        <description>Replacement field for Finished_at_Equipment__c roll-up.</description>
        <label>Finished at Equipment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Planner_Group__c</fullName>
        <formula>Work_Order_Activity__r.Maintenance_Work_Order__r.Planner_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planner Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <formula>Work_Order_Activity__r.Maintenance_Work_Order__r.Operator_Route__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Started_New__c</fullName>
        <description>Replacement field for Started__c Roll up.</description>
        <label>Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Started_at_Equipment_New__c</fullName>
        <description>Replacement field for Started_at_Equipment__c rollup.</description>
        <label>Started at Equipment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Spent_Off_Equipment_Text__c</fullName>
        <formula>IF(ISNULL(TravelTime_New__c), &quot;&quot;, 

IF(FLOOR(TravelTime_New__c)=0, &quot;&quot;, 
TEXT( 
FLOOR(TravelTime_New__c) 
) &amp;&quot; Hours &quot;) 

&amp; 

IF(ROUND(MOD((TravelTime_New__c)*60,60),0)=0, &quot;&quot;, 
TEXT( 
ROUND(MOD((TravelTime_New__c)*60,60),0) 
) &amp;&quot; Minutes &quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent Off Equipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Spent_On_Equipment_Text__c</fullName>
        <formula>IF(ISNULL(WorkTime_New__c ), &quot;&quot;, 

IF(FLOOR(WorkTime_New__c)=0, &quot;&quot;, 
TEXT( 
FLOOR(WorkTime_New__c) 
) &amp;&quot; Hours &quot;) 

&amp; 

IF(ROUND(MOD((WorkTime_New__c )*60,60),0)=0, &quot;&quot;, 
TEXT( 
ROUND(MOD((WorkTime_New__c )*60,60),0) 
) &amp;&quot; Minutes &quot;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Spent On Equipment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Man_Hours_Text__c</fullName>
        <formula>IF(ISNULL(WorkTime_New__c +  TravelTime_New__c  ), &quot;&quot;,

IF(FLOOR(WorkTime_New__c+ TravelTime_New__c)=0, &quot;&quot;,
TEXT(
FLOOR(WorkTime_New__c + TravelTime_New__c)
) &amp;&quot; Hours &quot;)

&amp;

IF(ROUND(MOD((WorkTime_New__c + TravelTime_New__c  )*60,60),0)=0, &quot;&quot;,
TEXT(
ROUND(MOD((WorkTime_New__c + TravelTime_New__c  )*60,60),0)
) &amp;&quot; Minutes &quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Man Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Man_Hours__c</fullName>
        <formula>(TravelTime_New__c +  WorkTime_New__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Man Hours (Hrs)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tradesman__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tradesman</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Work Order Activity Logs</relationshipLabel>
        <relationshipName>Work_Order_Activity_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TravelTime_New__c</fullName>
        <description>Replacement for TravelTime__c roll up.</description>
        <label>Time Spent Off Equipment (hrs)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WorkTime_New__c</fullName>
        <label>Time Spent On Equipment (hrs)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Work_Center__c</fullName>
        <formula>Work_Order_Activity__r.Work_Center__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Center</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Activity__c</fullName>
        <label>Work Order Activity</label>
        <referenceTo>Work_Order_Activity__c</referenceTo>
        <relationshipLabel>Daily Logs</relationshipLabel>
        <relationshipName>Work_Order_Activity_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Work Order Activity Log</label>
    <nameField>
        <displayFormat>AL-{000000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Activity Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>